2004-02-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fixed warning of valgrind for regiontest

2004-02-19  Karl Runge <runge@karlrunge.com>
	* x11vnc options -nosel -noprimary -visual.
	* add clipboard/selection handling.
	* add visual option (mostly for testing and workarounds).
	* improve shm cleanup on failures.

2004-02-04  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Make examples (at least a few) compileable with g++,
	  as pointed out by Juan Jose Costello

2004-01-30  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Thanks to Paul Fox from Bright Star Engineering,
	  a few more memory leaks were fixed.

2004-01-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Honour the check for libz and libjpeg again.

2004-01-21  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* do not send unneccessary updates when drawing a cursor
	* ignore SIGPIPE; it is handled by EPIPE
	* add an example how to use rfbDoCopyRect
	* add experimental progressive updating (off by default)

2004-01-19  Karl Runge <runge@karlrunge.com>
	* handle mouse button number mismatch
	* improved pointer input handling during drags, etc.
	* somewhat faster copy_tiles() -> copy_tiles()
	* x11vnc options -buttonmap -old_pointer -old_copytile

2004-01-16  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* compile fix for cygwin

2004-01-09  Karl Runge <runge@karlrunge.com>
	* x11vnc options -allow, -localhost, -nodragging, -input_skip
	* minimize memory usage under -nofb

2003-12-08  Karl Runge <runge@karlrunge.com>
	* add check for XKEYBOARD extension in configure.ac
	* support XBell events (disable: "-nobell"), "-nofb" in x11vnc

2003-11-07  Karl Runge <runge@karlrunge.com>
	* support "-inetd", "-noshm", "-flipbyteorder" in x11vnc

2003-10-26  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* released Version 0.6

2003-09-11  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.in, */Makefile.in, aclocal.m4,